ucs-test-ucsschool (4.0.4-26) unstable; urgency=low

  * Bug #44993: fix logging

 -- Daniel Troeder <troeder@univention.de>  Wed, 06 Sep 2017 10:16:41 +0200

ucs-test-ucsschool (4.0.4-25) unstable; urgency=low

  * Bug #44993: fix tests

 -- Daniel Troeder <troeder@univention.de>  Fri, 21 Jul 2017 14:57:08 +0200

ucs-test-ucsschool (4.0.4-24) unstable; urgency=medium

  * Bug #41344: fix deprecated samba-tool user add

 -- Florian Best <best@univention.de>  Wed, 19 Jul 2017 10:15:24 +0200

ucs-test-ucsschool (4.0.4-23) unstable; urgency=low

  * Bug #44993: adapt test to API change

 -- Daniel Troeder <troeder@univention.de>  Mon, 17 Jul 2017 09:56:15 +0200

ucs-test-ucsschool (4.0.4-22) unstable; urgency=low

  * Bug #44838: adapt test to code changes

 -- Daniel Troeder <troeder@univention.de>  Thu, 13 Jul 2017 10:15:09 +0200

ucs-test-ucsschool (4.0.4-21) unstable; urgency=medium

  * Bug #44370: add test case 219_import_users_umlauts

 -- Florian Best <best@univention.de>  Wed, 21 Jun 2017 19:38:58 +0200

ucs-test-ucsschool (4.0.4-20) unstable; urgency=low

  * Bug #44310: trigger resync of group object to s4 if membership is not synced

 -- Daniel Troeder <troeder@univention.de>  Fri, 16 Jun 2017 08:16:17 +0200

ucs-test-ucsschool (4.0.4-19) unstable; urgency=low

  * Bug #44310: wait longer in 70_users_module

 -- Daniel Troeder <troeder@univention.de>  Wed, 14 Jun 2017 14:37:42 +0200

ucs-test-ucsschool (4.0.4-18) unstable; urgency=low

  * Bug #44537: add support for multiple schools to test User
  * check removal of single, primary and secondary schools from User

 -- Daniel Troeder <troeder@univention.de>  Thu, 18 May 2017 15:26:30 +0200

ucs-test-ucsschool (4.0.4-17) unstable; urgency=low

  * compare DNs caseinsensitive, raise timeout (Bug #44311).

 -- Daniel Troeder <troeder@univention.de>  Tue, 16 May 2017 17:18:02 +0200

ucs-test-ucsschool (4.0.4-16) unstable; urgency=low

  * Raise timeouts (Bug #44310).
